--- a/model_eventBus/src/main/res/layout/activity_main.xml
+++ b/model_eventBus/src/main/res/layout/activity_main.xml
@@ -5,11 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.lt.module_eventbus.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="main Activity"/>
+        android:text="MainActivity"/>
 
 </RelativeLayout>
